employer sharing apps journey updates

--- a/app/views/v14/_summary.html
+++ b/app/views/v14/_summary.html
@@ -74,23 +74,35 @@
             </thead>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/email-shared-applications">Email to employer</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/email-shared-applications">Email to employer</a></td>
                 <td class='govuk-table__cell'>
                   <li>NEW email send to employer what applications have been shared for them to review</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'>Homepage tasks bar</td>
+                <td class='govuk-table__cell'>Recruit dashboard</a></td>
                 <td class='govuk-table__cell'>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/home">ADDED notification task</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/0-dashboard">UPDATED Recruit dashboard - given provider permissions</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/0-dashboard-2">UPDATED Recruit dashboard - no provider permissions</a></li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'>UR version testing of dashboard</a></td>
+                <td class='govuk-table__cell'>'Your adverts' page'</td>
                 <td class='govuk-table__cell'>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/view/0-dashboard">ADDED new tile</a></li>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/view/0-dashboard-v3">ADDED banner</a></li>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/view/0-dashboard-v2">ADDED new tile (0 tiles)</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/6-shared-all?filter=shared all">UPDATED shared applications (all) filter</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/6-shared-new?filter=shared new">UPDATED shared applications (oustanding to review) filter</li>
+                </td>
+              </tr>
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/6b-shared-applications">Shared applications per advert page</a></td>
+                <td class='govuk-table__cell'>
+                  <li>NEW page</li>
+                </td>
+              </tr>
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/account/application-shared">Shared anonymous application</a></td>
+                <td class='govuk-table__cell'>
+                  <li>NEW page</li>
                 </td>
               </tr>
             </tbody>
