--- a/app/views/v14/employer/email-shared-applications.html
+++ b/app/views/v14/employer/email-shared-applications.html
@@ -9,7 +9,7 @@
 
 <p>
 	To: <br>
-	From: The Apprenticeship service <br>
+	From: The apprenticeship service <br>
 	Subject: You have new applications shared with you by a training provider
 </p>
 
@@ -28,7 +28,7 @@
 		</p>
 
 		<p>
-			Log in to your Apprenticeship service account to view the applications. 
+			Sign in to your apprenticeship service account to view the applications. 
 		</p>
 
 		<p>
@@ -37,7 +37,7 @@
 
 		<p>
 			From <br>
-			The Apprenticeship service
+			The apprenticeship service
 		</p>
 
 		<p>
