--- a/app/views/v14/employer/view/0-dashboard.html
+++ b/app/views/v14/employer/view/0-dashboard.html
@@ -100,10 +100,12 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">0</span>
+              <span class="das-card--stat">1</span>
+              <a class="card-link" href="#">
                   Review adverts
+              </a>
             </h3>
-            <p class="govuk-body das-card--description">If you want to review adverts before they are published you need to <a href="#" class="govuk-link govuk-link--no-visited-state">manage your permissions</a>.</p>
+            <p class="govuk-body das-card--description">Adverts created by training providers that you need to review.</p>
             <!--<span class="das-card--stat">2</span>
             <a class="card-link" href="vacancies?filter=pending review">
               Review adverts
@@ -122,7 +124,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">2</span>
               <a class="card-link" href="1a-pending-review">
-                Pending review
+                Adverts pending DfE review
               </a>
             </h3>
               <p class="govuk-body das-card--description">Adverts that you've sent for review.</p>
@@ -215,12 +217,12 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">2</span>
-              <a class="card-link" href="6-shared-new">
+              <a class="card-link" href="6-shared-new?filter=shared new">
                 Applications shared to review
               </a>
             </h3>
-            <p class="govuk-body das-card--description">Review applications shared with you by a training provider <br><br>
-            <a href="6-shared-all"> View all shared applications </a>
+            <p class="govuk-body das-card--description">Review applicants shared by your training provider.  <br><br>
+            <a href="6-shared-all?filter=shared all"> View all shared applications </a>
             <br><br>
           </p>
           </div>
