--- a/app/views/v14/employer/view/6b-shared-applications-yes.html
+++ b/app/views/v14/employer/view/6b-shared-applications-yes.html
@@ -17,19 +17,23 @@ Adverts
     <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
       <div class="govuk-notification-banner__header">
         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-          Success
+          Done
         </h2>
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Application C5564EA reviewed
+          Response for C5564EA sent: Yes, I would like to interview this applicant.
         </h3>
-        <p class="govuk-body">Your response has been sent to the training provider.</p>
+        <p class="govuk-body">The training provider has been notified.</p>
       </div>
     </div>
 
     <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
     <h1 class="govuk-heading-l">Shared applications</h1>
+
+    <p>
+      You are being shown anonymised versions of these applications.
+    </p>
 
 <!-- table START -->
 {%- from "govuk/components/tag/macro.njk" import govukTag -%}
