--- a/app/views/v14/employer/view/6b-shared-applications.html
+++ b/app/views/v14/employer/view/6b-shared-applications.html
@@ -17,6 +17,9 @@ Manage vacancy
     <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
     <h1 class="govuk-heading-l">Shared applications</h1>
 
+    <p>
+      You are being shown anonymised versions of these applications.
+    </p>
 
 <!-- table START -->
 {%- from "govuk/components/tag/macro.njk" import govukTag -%}
