--- a/app/views/v14/employer/account/application-shared-no.html
+++ b/app/views/v14/employer/account/application-shared-no.html
@@ -17,7 +17,7 @@ Manage apprentices
   <div class="govuk-grid-column-two-thirds">
     <section>
 
-      <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
+      <span class="govuk-caption-xl">Entry Level Development Engineer Apprentice</span>
       <h1 class="govuk-heading-xl">Application ID: C5662EA</h1>
 
 
