--- a/app/views/v14/employer/account/application-shared.html
+++ b/app/views/v14/employer/account/application-shared.html
@@ -17,7 +17,7 @@ Manage apprentices
   <div class="govuk-grid-column-two-thirds">
     <section>
 
-      <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
+      <span class="govuk-caption-xl">Entry Level Development Engineer Apprentice</span>
       <h1 class="govuk-heading-xl">Application ID: C5662EA</h1>
 
 
@@ -183,9 +183,9 @@ Manage apprentices
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden govuk-character-count" id="conditional-contact-3" data-module="govuk-character-count" data-maxwords="200">
                 <div class="govuk-form-group">
                   <div id="with-hint-hint" class="govuk-hint">
-                    Explain why the applicant has been unsuccessful. Your feedback will be sent to the training provider so they can inform the applicant.
+                    Explain why you don't want to interview this applicant. Your comments will be sent to the training provider so they can give feedback to the applicant.
                   </div>
-                  <textarea class="govuk-textarea govuk-js-character-count" id="with-hint" name="respond-no" rows="5" aria-describedby="with-hint-info with-hint-hint"></textarea>
+                  <textarea class="govuk-textarea govuk-js-character-count" id="with-hint" name="respond-no" rows="6" aria-describedby="with-hint-info with-hint-hint"></textarea>
               
                 <div id="with-hint-info" class="govuk-hint govuk-character-count__message">
                   You can enter up to 200 words
@@ -202,7 +202,7 @@ Manage apprentices
 
 <div class="govuk-button-group">
   <button class="govuk-button" data-module="govuk-button">
-    Save
+    Send response
   </button>
 
   <a class="govuk-link" href="manage-vacancy">Cancel</a>
