--- a/app/views/v14/_summary.html
+++ b/app/views/v14/_summary.html
@@ -90,7 +90,7 @@
                 <td class='govuk-table__cell'>'Your adverts' page'</td>
                 <td class='govuk-table__cell'>
                   <li><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/6-shared-all?filter=shared all">UPDATED shared applications (all) filter</a></li>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/6-shared-new?filter=shared new">UPDATED shared applications (oustanding to review) filter</li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v14/employer/view/6-shared-new?filter=shared new">UPDATED shared applications (new to review) filter</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
