--- a/app/views/v14/employer/email-shared-applications.html
+++ b/app/views/v14/employer/email-shared-applications.html
@@ -9,7 +9,7 @@
 
 <p>
 	To: <br>
-	From: The apprenticeship service <br>
+	From: The Apprenticeship service <br>
 	Subject: You have new applications shared with you by a training provider
 </p>
 
@@ -37,7 +37,7 @@
 
 		<p>
 			From <br>
-			The apprenticeship service
+			The Apprenticeship service
 		</p>
 
 		<p>
