prototype updates to make it so one application going through journey for UR

--- a/app/views/v13/provider/account/application-employer-reviewed-no.html
+++ b/app/views/v13/provider/account/application-employer-reviewed-no.html
@@ -156,10 +156,7 @@ Manage apprentices
       <p>No, the employer does not want to interview this applicant.</p>
 
       {{ govukInsetText({
-        html: "Hi, <br><br>
-        Unfortunately to a high demand in applicants this candidate hasn’t met some of the desirable criteria and therefore we won’t continue with the application. Please check back for future vacancies.
-        <br><br>
-        Thanks"
+        html: "No, I don't think this applicant will be a good fit for the role."
       }) }}
 
       <br>
