--- a/app/views/v13/provider/view/3c-manage-applications-unsuccessful-multiple.html
+++ b/app/views/v13/provider/view/3c-manage-applications-unsuccessful-multiple.html
@@ -166,63 +166,36 @@ Manage vacancy
 
 {%
   set appsTableData = [
-  {
-    name: "Keith Stewart",
-    id: "678CFR0",
-    status: "successful",
-    link: "",
-    classes: "govuk-tag--green",
-    date: "13 Jan 2023",
-    disability: "Prefer not to say"
-  },
-  {
-    name: "Faizal Dawood",
-    id: "C5662EA",
-    status: "Unsuccessful",
-    link: "",
-    classes: "govuk-tag--red",
-    date: "13 Jan 2023",
-    disability: "Prefer not to say"
-  },
-  {
-    name: "Cynthia Perez",
-    id: "FL13JK0",
-    status: "Unsuccessful",
-    link: "",
-    classes: "govuk-tag--red",
-    date: "15 Jan 2023",
-    disability: "No"
-  },
-  {
-    name: "Susie Noble",
-    id: "LL13J9H",
-    status: "Unsuccessful",
-    link: "",
-    classes: "govuk-tag--red",
-    date: "15 Jan 2023",
-    disability: "No"
-  },
-  {
-    name: "Charles Davis",
-    id: "B2LH789",
-    status: "Unsuccessful",
-    link: "",
-    classes: "govuk-tag--red",
-    date: "15 Jan 2023",
-    disability: "Prefer not to say"
-  },
-  {
-    name: "Neena Patel",
-    id: "78BH067",
-    status: "Unsuccessful",
-    link: "",
-    classes: "govuk-tag--red",
-    date: "15 Jan 2023",
-    disability: "No"
-  },
     {
-      name: "Jose Robinson",
-      id: "LY6TY44",
+      name: "Keith Stewart",
+      id: "678CFR0",
+      status: "Successful",
+      link: "",
+      classes: "govuk-tag--green",
+      date: "13 Jan 2023",
+      disability: "Prefer not to say"
+    },
+    {
+      name: "Cynthia Perez",
+      id: "FL13JK0",
+      status: "Unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "15 Jan 2023",
+      disability: "No"
+    },
+    {
+      name: "Susie Noble",
+      id: "LL13J9H",
+      status: "Unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "15 Jan 2023",
+      disability: "No"
+    },
+    {
+      name: "Charles Davis",
+      id: "B2LH789",
       status: "Unsuccessful",
       link: "",
       classes: "govuk-tag--red",
@@ -230,124 +203,52 @@ Manage vacancy
       disability: "Prefer not to say"
     },
     {
-      name: "John Smith",
-      id: "39DBE1A",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "16 Jan 2023",
-      disability: "Yes"
-    },
-    {
-      name: "Danielle Price",
-      id: "HAK9F56",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "16 Jan 2023",
-      disability: "Yes"
-    },
-    {
-      name: "Bryant Cantu",
-      id: "5J9L5BF",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Loretta Giles",
-      id: "3LN79HH",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Blake Peterson",
-      id: "FL7J007",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Regina Carey",
-      id: "98J98FG",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Millicent Thompson",
-      id: "NJLP6GF",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Deena Lawson",
-      id: "C78N0LK",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Garland Valenzuela",
-      id: "45DL0HV",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Jerome Cross",
-      id: "79ML444",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Judy Ward",
-      id: "897DW5T",
+      name: "Neena Patel",
+      id: "78BH067",
       status: "Unsuccessful",
       link: "",
       classes: "govuk-tag--red",
       date: "15 Jan 2023",
       disability: "No"
     },
-    {
-      name: "Ellen Collins",
-      id: "6H0IL55",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "13 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Wes Arnold",
-      id: "PL67D9F",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "13 Jan 2023",
-      disability: "No"
-    }
-]
-%}
+      {
+        name: "Jose Robinson",
+        id: "LY6TY44",
+        status: "Unsuccessful",
+        link: "",
+        classes: "govuk-tag--red",
+        date: "15 Jan 2023",
+        disability: "Prefer not to say"
+      },
+      {
+        name: "John Smith",
+        id: "39DBE1A",
+        status: "Unsuccessful",
+        link: "",
+        classes: "govuk-tag--red",
+        date: "16 Jan 2023",
+        disability: "Yes"
+      },
+      {
+        name: "Ellen Collins",
+        id: "6H0IL55",
+        status: "Unsuccessful",
+        link: "",
+        classes: "govuk-tag--red",
+        date: "13 Jan 2023",
+        disability: "No"
+      },
+      {
+        name: "Judy Ward",
+        id: "897DW5T",
+        status: "unsuccessful",
+        link: "../account/application-employer-reviewed-no",
+        classes: "govuk-tag--red",
+        date: "15 Jan 2023",
+        disability: "No"
+      }
+  ]
+  %}
     <table class="govuk-table responsive-table" data-module="das-table-sort">
       <thead class="govuk-table__header">
         <tr class="govuk-table__row" role="row">
