--- a/app/views/v13/provider/view/6-employer-reviewed.html
+++ b/app/views/v13/provider/view/6-employer-reviewed.html
@@ -6,7 +6,7 @@ Vacancies
 
 {% block beforeContent %}
 {{super()}}
-<a href="0-dashboard" class="govuk-back-link">Return to dashboard</a>
+<a href="0-dashboard-employer-reviewed" class="govuk-back-link">Return to dashboard</a>
 
 <style>
   .search-field-darker .search-input input {
