--- a/app/views/v13/provider/view/8a-multiple-unsuccessful.html
+++ b/app/views/v13/provider/view/8a-multiple-unsuccessful.html
@@ -60,39 +60,30 @@ Manage vacancy
 {%
   set appsTableData = [
   {
-    name: "Faizal Dawood",
-    id: "C5662EA",
-    status: "shared",
-    link: "",
-    classes: "govuk-tag--yellow",
-    date: "13 Oct 2022",
-    disability: "Prefer not to say"
-  },
-  {
     name: "Cynthia Perez",
     id: "FL13JK0",
     status: "in review",
-    link: "",
+    link: "#",
     classes: "govuk-tag--yellow",
-    date: "15 Oct 2022",
+    date: "15 Jan 2023",
     disability: "No"
   },
   {
     name: "Susie Noble",
     id: "LL13J9H",
-    status: "Interviewing",
+    status: "in review",
     link: "",
     classes: "govuk-tag--yellow",
-    date: "15 Oct 2022",
+    date: "15 Jan 2023",
     disability: "No"
   },
   {
     name: "Charles Davis",
     id: "B2LH789",
-    status: "employer reviewed",
+    status: "shared",
     link: "",
-    classes: "govuk-tag--blue",
-    date: "15 Oct 2022",
+    classes: "govuk-tag--yellow",
+    date: "15 Jan 2023",
     disability: "Prefer not to say"
   },
   {
@@ -101,7 +92,7 @@ Manage vacancy
     status: "shared",
     link: "",
     classes: "govuk-tag--yellow",
-    date: "15 Oct 2022",
+    date: "15 Jan 2023",
     disability: "No"
   },
     {
@@ -110,7 +101,7 @@ Manage vacancy
       status: "shared",
       link: "",
       classes: "govuk-tag--yellow",
-      date: "15 Oct 2022",
+      date: "15 Jan 2023",
       disability: "Prefer not to say"
     },
     {
@@ -119,93 +110,11 @@ Manage vacancy
       status: "New",
       link: "",
       classes: "govuk-tag--blue",
-      date: "16 Oct 2022",
+      date: "16 Jan 2023",
       disability: "Yes"
-    },
-    {
-      name: "Danielle Price",
-      id: "HAK9F56",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "16 Oct 2022",
-      disability: "Yes"
-    },
-    {
-      name: "Bryant Cantu",
-      id: "5J9L5BF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Loretta Giles",
-      id: "3LN79HH",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Blake Peterson",
-      id: "FL7J007",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Regina Carey",
-      id: "98J98FG",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Millicent Thompson",
-      id: "NJLP6GF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Deena Lawson",
-      id: "C78N0LK",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Garland Valenzuela",
-      id: "45DL0HV",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Jerome Cross",
-      id: "79ML444",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
     }
 ]
 %}
-
 
 <!-- table START -->
   <form action="8b-feedback-unsuccessful">
