--- a/app/views/v14/employer/view/0-dashboard-2.html
+++ b/app/views/v14/employer/view/0-dashboard-2.html
@@ -103,7 +103,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
               <span class="das-card--stat">0</span>
                   Review adverts
             </h3>
-            <p class="govuk-body das-card--description">You don't allow your training provider to create adverts for you. <br><br> <a href="#" class="govuk-link govuk-link--no-visited-state">Manage your permissions</a>.</p>
+            <p class="govuk-body das-card--description">You don't allow your training provider to create adverts for you. <br><br> <a href="#" class="govuk-link govuk-link--no-visited-state">Manage your permissions</a></p>
             <!--<span class="das-card--stat">2</span>
             <a class="card-link" href="vacancies?filter=pending review">
               Review adverts
@@ -217,7 +217,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
               <span class="das-card--stat">0</span>
                 Applications shared to review
             </h3>
-            <p class="govuk-body das-card--description">You don't allow your training provider to create adverts for you. <br><br> <a href="#" class="govuk-link govuk-link--no-visited-state">Manage your permissions</a>.</p><br>
+            <p class="govuk-body das-card--description">You don't allow your training provider to manage applications for you. <br><br> <a href="#" class="govuk-link govuk-link--no-visited-state">Manage your permissions</a></p><br>
           </div>
         </div>
       </div>
