--- a/app/views/v13/provider/view/3c-manage-applications-successful.html
+++ b/app/views/v13/provider/view/3c-manage-applications-successful.html
@@ -14,19 +14,6 @@ Manage vacancy
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
-      <div class="govuk-notification-banner__header">
-        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-          Done
-        </h2>
-      </div>
-      <div class="govuk-notification-banner__content">
-        <h3 class="govuk-notification-banner__heading">
-          Keith Stewart's application is successful.
-        </h3>
-      </div>
-    </div>
         
     <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
     <h1 class="govuk-heading-xl">Entry Level Development Engineer Apprentice</h1>
@@ -165,18 +152,9 @@ Manage vacancy
 {%
   set appsTableData = [
   {
-    name: "Faizal Dawood",
-    id: "C5662EA",
-    status: "shared",
-    link: "",
-    classes: "govuk-tag--yellow",
-    date: "13 Jan 2023",
-    disability: "Prefer not to say"
-  },
-  {
     name: "Keith Stewart",
     id: "678CFR0",
-    status: "offer made",
+    status: "Successful",
     link: "",
     classes: "govuk-tag--green",
     date: "13 Jan 2023",
@@ -186,7 +164,7 @@ Manage vacancy
     name: "Cynthia Perez",
     id: "FL13JK0",
     status: "in review",
-    link: "",
+    link: "#",
     classes: "govuk-tag--yellow",
     date: "15 Jan 2023",
     disability: "No"
@@ -194,7 +172,7 @@ Manage vacancy
   {
     name: "Susie Noble",
     id: "LL13J9H",
-    status: "Interviewing",
+    status: "in review",
     link: "",
     classes: "govuk-tag--yellow",
     date: "15 Jan 2023",
@@ -203,9 +181,9 @@ Manage vacancy
   {
     name: "Charles Davis",
     id: "B2LH789",
-    status: "employer reviewed",
+    status: "shared",
     link: "",
-    classes: "govuk-tag--blue",
+    classes: "govuk-tag--yellow",
     date: "15 Jan 2023",
     disability: "Prefer not to say"
   },
@@ -235,114 +213,6 @@ Manage vacancy
       classes: "govuk-tag--blue",
       date: "16 Jan 2023",
       disability: "Yes"
-    },
-    {
-      name: "Danielle Price",
-      id: "HAK9F56",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "16 Jan 2023",
-      disability: "Yes"
-    },
-    {
-      name: "Bryant Cantu",
-      id: "5J9L5BF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Loretta Giles",
-      id: "3LN79HH",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Blake Peterson",
-      id: "FL7J007",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Regina Carey",
-      id: "98J98FG",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Millicent Thompson",
-      id: "NJLP6GF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Deena Lawson",
-      id: "C78N0LK",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Garland Valenzuela",
-      id: "45DL0HV",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Jerome Cross",
-      id: "79ML444",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Judy Ward",
-      id: "897DW5T",
-      status: "unsuccessful",
-      link: "../account/application-employer-reviewed-no",
-      classes: "govuk-tag--red",
-      date: "15 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Ellen Collins",
-      id: "6H0IL55",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "13 Jan 2023",
-      disability: "No"
-    },
-    {
-      name: "Wes Arnold",
-      id: "PL67D9F",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "13 Jan 2023",
-      disability: "No"
     }
 ]
 %}
