--- a/app/views/v14/employer/view/6-shared-new.html
+++ b/app/views/v14/employer/view/6-shared-new.html
@@ -123,15 +123,15 @@ Adverts
             <option value="live" {% if data.filter=='live' %}selected="selected" {%endif%}>live adverts</option>
             <option value="rejected" {% if data.filter=='rejected' %}selected="selected" {%endif%}>rejected adverts</option>
             <option value="review" {% if data.filter=='pending review' %}selected="selected" {%endif%}>ready for review</option>
-            <option value="pending" {% if data.filter=='pending review' %}selected="selected" {%endif%}>adverts pending review</option>
+            <option value="pending" {% if data.filter=='pending review' %}selected="selected" {%endif%}>adverts pending DfE review</option>
             <option value="draft" {% if data.filter=='draft' %}selected="selected" {%endif%}>draft adverts</option>
             <option value="closed" {% if data.filter=='closed' %}selected="selected" {%endif%}>closed adverts</option>
           </optgroup>
           <optgroup label="Applications">
             <option value="new" {% if data.filter=='new' %}selected="selected" {%endif%}>with new applications</option>
             <option value="withApplication" {% if data.filter=='withApplication' %}selected="selected" {%endif%}>with applications</option>
-            <option value="pending" {% if data.filter=='shared all' %}selected="selected" {%endif%}>shared applications</option>
             <option value="pending" {% if data.filter=='shared new' %}selected="selected" {%endif%}>shared applications to review</option>
+            <option value="pending" {% if data.filter=='shared all' %}selected="selected" {%endif%}>shared applications</option>
           </optgroup>
           <optgroup label="Other">
             <option value="closing-no-applications" {% if data.filter=='closing-no-applications' %}selected="selected" {%endif%}>closing soon with no applications</option>
